updating default network pushed routes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,7 @@ services:
   openvpn-server:
     build: .
     environment:
-      - DEBUG=0
-      - PUBLIC_CONNECTION_URL=tcp://192.168.20.23:1194
-    ports:
-      - 1194:1194
+      - PUBLIC_CONNECTION_URL=udp://192.168.20.23:1194
+      - PUSH_CLIENT_ROUTE=10.0.0.0 255.0.0.0
+    network_mode: host
     privileged: true
-    # command: sleep 99999
